load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_path")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/robfig/bazel-libsass

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/robfig/bazel-libsass",
    visibility = ["//visibility:private"],
    deps = ["@com_github_yext_go_libsass//:go_default_library"],
)

go_binary(
    name = "bazel-libsass",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_path(
    name = "gopath",
    deps = [":go_default_library"],
)
